src/snapshots/antsi__parser__tests__parse_unescaped_open_square_bracket_in_token@result.snap
---
source: src/parser.rs
description: "[fg:red](before [ after)"
---
[
    Content(
        "after",
    ),
]
