src/snapshots/antsi__parser__tests__token_with_background.snap
---
source: src/parser.rs
description: "[bg:blue](inner)"
---
[
    Styled {
        content: [
            Content(
                "inner",
            ),
        ],
        style: Style {
            foreground: None,
            background: Some(
                Blue,
            ),
            decoration: None,
        },
    },
]
