src/snapshots/antsi__parser__tests__token_with_foreground.snap
---
source: src/parser.rs
description: "[fg:red](inner)"
---
[
    Styled {
        content: [
            Content(
                "inner",
            ),
        ],
        style: Style {
            foreground: Some(
                Red,
            ),
            background: None,
            decoration: None,
        },
    },
]
