src/snapshots/antsi__parser__tests__token_with_leading_and_trailing_content.snap
---
source: src/parser.rs
description: "leading [fg:red](content) trailing"
---
[
    Content(
        "leading ",
    ),
    Styled {
        content: [
            Content(
                "content",
            ),
        ],
        style: Style {
            foreground: Some(
                Red,
            ),
            background: None,
            decoration: None,
        },
    },
    Content(
        " trailing",
    ),
]
