src/snapshots/antsi__parser__tests__token_with_leading_content.snap
---
source: src/parser.rs
description: "leading [fg:red](content)"
---
[
    Content(
        "leading ",
    ),
    Styled {
        content: [
            Content(
                "content",
            ),
        ],
        style: Style {
            foreground: Some(
                Red,
            ),
            background: None,
            decoration: None,
        },
    },
]
