src/snapshots/antsi__parser__tests__token_with_multiple_decorations.snap
---
source: src/parser.rs
description: "[deco:dim,italic](inner)"
---
[
    Styled {
        content: [
            Content(
                "inner",
            ),
        ],
        style: Style {
            foreground: None,
            background: None,
            decoration: Some(
                {
                    Dim,
                    Italic,
                },
            ),
        },
    },
]
