src/snapshots/antsi__parser__tests__token_with_multiple_styles.snap
---
source: src/parser.rs
description: "[deco:dim,italic;fg:red;bg:blue](inner)"
---
[
    Styled {
        content: [
            Content(
                "inner",
            ),
        ],
        style: Style {
            foreground: Some(
                Red,
            ),
            background: Some(
                Blue,
            ),
            decoration: Some(
                {
                    Dim,
                    Italic,
                },
            ),
        },
    },
]
