src/snapshots/antsi__parser__tests__token_with_single_decoration.snap
---
source: src/parser.rs
description: "[deco:dim](inner)"
---
[
    Styled {
        content: [
            Content(
                "inner",
            ),
        ],
        style: Style {
            foreground: None,
            background: None,
            decoration: Some(
                {
                    Dim,
                },
            ),
        },
    },
]
