src/snapshots/antsi__parser__tests__token_with_trailing_content.snap
---
source: src/parser.rs
description: "[fg:red](content) trailing"
---
[
    Styled {
        content: [
            Content(
                "content",
            ),
        ],
        style: Style {
            foreground: Some(
                Red,
            ),
            background: None,
            decoration: None,
        },
    },
    Content(
        " trailing",
    ),
]
